--- a/views/about.pug
+++ b/views/about.pug
@@ -6,7 +6,7 @@ block content
         h1.xl About Us
         p.lead Your gateway to japan
         
-  section.about.main.py-3.bg-light
+  section.about-main.py-3.bg-light
     .container
       .about-card
         div
