--- a/public/css/detailV.css
+++ b/public/css/detailV.css
@@ -1,17 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+:root {
+  --primary-color: #047aed;
+  --secondary-color: #1c3fa8;
+  --dark-color: #002240;
+  --light-color: #f4f4f4;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
+}
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  color: #333;
+  line-height: 1.6;
   font-weight: 400;
-  color: #1b1f23;
-  line-height: 1.43;
   background-color: #f0f3f8;
-  /* background: lightgrey; */
 }
 
 li {
@@ -25,12 +34,40 @@ h5 {
 }
 
 .container {
-  width: 1000px;
+  max-width: 1170px;
   margin: 0 auto;
-  /* padding-right: 15px; */
-  /* padding-left: 15px; */
-  /* margin-right: auto; */
-  /* margin-left: auto; */
+  overflow: auto;
+  padding: 0 40px;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
+
+/* navbar */
+.navbar {
+  background-color: var(--primary-color);
+  color: #fff;
+  height: 70px;
+}
+
+.navbar ul {
+  display: flex;
+}
+
+.navbar a {
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
+}
+
+.navbar a:hover {
+  border-bottom: 2px #fff solid;
+}
+
+.navbar .flex {
+  justify-content: space-between;
 }
 
 
