--- a/public/css/style.css
+++ b/public/css/style.css
@@ -466,9 +466,12 @@ pre {
   .cli .grid,
   .cloud .grid,
   .features-main .grid,
-  .docs-main .grid {
+  .docs-main .grid,
+  .contact-head .grid,
+  .contact-main .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+    justify-content: center;
   }
 
   .showcase {
@@ -503,10 +506,9 @@ pre {
   }
 
   .features-main .grid>*:first-child,
-  .features-main .grid>*:nth-child(2) {
+  .features-main .grid>*:nth-child(2){
     grid-column: 1
   }
-
 
 }
 
@@ -527,14 +529,16 @@ pre {
   }
 
 
-  .search-vehicle .grid>* {
+  .search-vehicle .grid>*{
     grid-column: 1;
   }
 
   .search-page-container,
   .search-vehicle .container,
   .about-head .container,
-  .about-main .container {
+  .about-main .container,
+  .contact-head .container,
+  .contact-main .container {
     padding: 5px;
     overflow: hidden;
   }
@@ -549,12 +553,19 @@ pre {
     width: 100%;
     padding: 10px;
   }
-  .search-vehicles  .filter-box{
-    /* background-color: green; */
-    /* margin: ; */
-    /* padding: 10px; */
+
+  .contact-main {
+    padding: 5px;
   }
-  /* .search-vehicles .search-vehicles-form .grid>* {
-    grid-column: 1 / span 2;
-  } */
+
+  .contact-main .grid > *:first-child,
+  .contact-main .grid > *:nth-child(2) {
+    max-width: 350px;
+    justify-self: center;
+  }
+
+  .contact-main .contact-form  textarea{
+    max-width: 100%;
+  }
+
 }
