--- a/public/css/detailV.css
+++ b/public/css/detailV.css
@@ -230,18 +230,6 @@ col,
     flex: 0 0 50%;
     max-width: 50%;
   }
-  .carousel__image {
-    width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-  }
-  .col-lg-8.content .listing-content{
-    padding: 0;
-    margin: 0;
-  }
-  .detail-view .container {
-    padding: 10px;
-  }
 }
 
 /* 3b) med screen tablets */
@@ -420,5 +408,32 @@ textarea {
 
 @media (max-width: 768px) {}
 @media (max-width: 500px) {
+  .carousel__track{
+    max-width: 100%;
+  }
+
+  .carousel {
+    height: 300px;
+  }
+
+  .carousel__image {
+    width: 350px;
+    height: 100%;
+    object-fit: cover;
+  }
+  .detail-view .container {
+    padding: 10px;
+    overflow: hidden;
+  }
+
+  .carousel__button--left {
+    left: -5px;
+
+  }
+
+  .carousel__button--right {
+    right: -0px;
+
+  }
 
 }
