--- a/views/base.pug
+++ b/views/base.pug
@@ -23,6 +23,7 @@ html(lang="en")
     //- script(src='/js/login.js')
     
     
-    //-script(src='/js/bundle.js') 
+    script(src='/js/bundle.js') 
+
     
     
