--- a/views/overview.pug
+++ b/views/overview.pug
@@ -46,7 +46,7 @@ block content
               .main-content
                 .car-list-items
                   each vehicle in vehicles
-                    .list__vehicle-card
+                    .list__vehicle-card#inner-vehicle
                       .car-item-row
                         .row
                           .p-r-o.col-lg-4.col-md-12
